Project1/objects/Expense_Member__c.object
<CustomObject>
    <fields>
        <fullName>Contribution_Amount_INR__c</fullName>
        <label>Contribution Amount (INR)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Members</relationshipLabel>
        <relationshipName>Expense_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expense Members</relationshipLabel>
        <relationshipName>Expense_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ExpMemId - {00000}</displayFormat>
        <label>Expense_Member_Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_validation</fullName>
        <active>true</active>
        <description>Contribution amount must be less than or equal to the total expense</description>
        <errorConditionFormula>Contribution_Amount_INR__c &gt;  Expense__r.Amount_INR__c</errorConditionFormula>
        <errorMessage>Contribution Amount must be LESS THAN OR EQUAL to the total expense</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contribution_validation</fullName>
        <active>true</active>
        <description>Sum of individual contributions cannot exceed total expense</description>
        <errorConditionFormula>Contribution_Amount_INR__c  &gt; ( Expense__r.Amount_INR__c  -  Expense__r.Total_Contribution_INR__c )</errorConditionFormula>
        <errorMessage>Sum of individual contributions cannot exceed total expense</errorMessage>
    </validationRules>
</CustomObject>